# Trabajo-de-grado-Deteccion-de-obstaculos-Velero

./: README.md
Codigos_SBC/: Fly_take-Ubuntu.py  Fly_take.py
Impresiones/: GimbalAdapter_V2.stl  PiezaA-SoporteGimbal.stl  PiezaB-SoporteGimbal.stl
Modelo/: args.yaml  results.csv
SailBoatC/: CMakeLists.txt  main.c
